chore: WIP custom elements

--- a/src/styles/core/_javascript.less
+++ b/src/styles/core/_javascript.less
@@ -1,4 +1,19 @@
 //////////////////////
+// @TODO components
+//////////////////////
+
+xt-core,
+xt-toggle,
+xt-drop,
+xt-overlay,
+xt-smooth,
+xt-slider,
+xt-scroll,
+xt-sticky {
+  display: block;
+}
+
+  //////////////////////
 // javascript
 //////////////////////
 
