refactor(box): WIP box card overlay

--- a/src/core/button/button-setup.less
+++ b/src/core/button/button-setup.less
@@ -24,12 +24,15 @@
 
 // custom
 
+/* NO IT BUGS btn-close
 div.btn {
   // non interactive when div
   cursor: default;
   pointer-events: none;
 }
+*/
 
 .btn-close {
+  cursor: pointer;
   z-index: @index-btn-close;
 }
