--- a/src/core/card/card.less
+++ b/src/core/card/card.less
@@ -1,272 +1,21 @@
-@import '~xtend-library/src/core/card/card-setup.less';
-
 /**
- * card
+ * box-card
  */
 
-.card {
+.box-card {
   border-radius: .5em;
-  a& {
-    .link-none() !important;
-  }
-  .card-design {
+  .box-design {
     border-width: 0;
     border-style: solid;
     border-color: transparent;
   }
-  .card-title {
+  .box-title {
     .spacing-small();
     .font-sans--semibold();
     line-height: 1.2;
     letter-spacing: 0;
     text-transform: none;
   }
-  .card-item + .card-item {
-    &:before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      height: 1px;
-    }
-  }
-  .card-item .card-item + .card-item {
-    &:before {
-      left: 0;
-      bottom: 0;
-      right: auto;
-      width: 1px;
-      height: auto;
-    }
-  }
   // default options
-  .card--medium();
-}
-
-// variant
-
-.card--default {
-  color: @text;
-  .card-design {
-    border-color: @gray-200;
-    background: @gray-200;
-  }
-  .card-item + .card-item {
-    &:before {
-      background: fade(@gray-800, 10%);
-    }
-  }
-  a&, button& {
-    &:hover, &.hover, &:active, &.active {
-      color: @text--dark;
-      .card-design {
-        border-color: @gray-200--dark;
-        background: @gray-200--dark;
-      }
-    }
-    &:active, &.active {
-      box-shadow: @shadow-light;
-      .card-design {
-        box-shadow: @shadow-light;
-      }
-    }
-  }
-}
-
-.card--primary {
-  .text-inverse();
-  .card-design {
-    border-color: @accent;
-    background: @accent;
-  }
-  .card-item + .card-item {
-    &:before {
-      background: fade(@gray-200, 10%);
-    }
-  }
-  a&, button& {
-    &:hover, &.hover, &:active, &.active {
-      color: @text-inverse--dark;
-      .card-design {
-        border-color: @accent--dark;
-        background: @accent--dark;
-      }
-    }
-    &:active, &.active {
-      box-shadow: @shadow-primary;
-      .card-design {
-        box-shadow: @shadow-primary;
-      }
-    }
-  }
-}
-
-// size
-
-.card--small {
-  .font--small();
-  .card-block {
-    padding: 1.5rem 2rem;
-  }
-  .card-title {
-    font-size: 1.7rem;
-  }
-  // addon
-  .card--collapse& {
-    .card-content {
-      padding: 1.5rem 2rem;
-    }
-    .card-content, .card-group {
-      .list-space(small);
-    }
-  }
-  .card--full& {
-    .card-design {
-      top: -1rem;
-      left: -1.5rem;
-      bottom: -1rem;
-      right: -1.5rem;
-    }
-  }
-}
-
-.card--medium {
-  .font--medium();
-  .card-block {
-    padding: 2rem 2.5rem;
-  }
-  .card-title {
-    font-size: 2rem;
-  }
-  // addon
-  .card--collapse& {
-    .card-content {
-      padding: 2rem 2.5rem;
-    }
-    .card-content, .card-group {
-      .list-space(medium);
-    }
-  }
-  .card--full& {
-    .card-design {
-      top: -1.5rem;
-      left: -2rem;
-      bottom: -1.5rem;
-      right: -2rem;
-    }
-  }
-}
-
-.card--big {
-  .font--big();
-  .card-block {
-    padding: 3rem 3.5rem;
-  }
-  .card-title {
-    font-size: 3rem;
-  }
-  // addon
-  .card--collapse& {
-    .card-content {
-      padding: 3rem 3.5rem;
-    }
-    .card-content, .card-group {
-      .list-space(big);
-    }
-  }
-  .card--full& {
-    .card-design {
-      top: -2.5rem;
-      left: -3rem;
-      bottom: -2.5rem;
-      right: -3rem;
-    }
-  }
-}
-
-// special
-
-.card--nodesign {
-  .card-design {
-    display: none;
-  }
-}
-
-.card--squared {
-  border-radius: 0;
-}
-
-.card--noborder {
-  .card-design {
-    border: 0;
-  }
-}
-
-// addons
-
-.card--collapse {
-  .card-content {
-    .list-block();
-  }
-  .card-item {
-    padding: 0 !important;
-  }
-  .card-item + .card-item {
-    &:before {
-      display: none;
-    }
-  }
-}
-
-.card--full {
-  color: @text;
-  .card-design {
-    border-color: transparent;
-    background: transparent;
-  }
-}
-
-.card--overflow-y {
-  overflow-x: hidden;
-  overflow-y: auto;
-  max-height: 30rem;
-  .overflow-style(@mode: inner);
-}
-
-// animation
-
-.card {
-  a&, button& {
-    transition-property: all;
-    transition-duration: @time-big;
-    transition-timing-function: @bez-out;
-    .card-design {
-      transition-property: all;
-      transition-duration: @time-big;
-      transition-timing-function: @bez-out;
-    }
-    .card-item {
-      transition-property: transform;
-      transition-duration: @time-big;
-      transition-timing-function: @bez-out;
-    }
-    &:hover, &.hover, &:active, &.active {
-      transform: translateY(-.5rem) scale(1.03, 1.05);
-      transition-property: all;
-      transition-duration: @time-big;
-      transition-timing-function: @bez-in;
-      .card-design {
-        transition-property: all;
-        transition-duration: @time-big;
-        transition-timing-function: @bez-in;
-      }
-      .card-item {
-        transform: scale(0.97, 0.95);
-        transition-property: transform;
-        transition-duration: @time-big;
-        transition-timing-function: @bez-in;
-      }
-    }
-  }
+  .box--medium();
 }
