--- a/src/gatsby/assets/styles/_header.less
+++ b/src/gatsby/assets/styles/_header.less
@@ -79,7 +79,7 @@
 .gatsby_btn-site_header_link {
   .full();
   .link-none();
-  .btn-noborder();
+  .btn-border();
   box-shadow: none !important;
   margin-top: 2px;
   margin-bottom: 2px;
@@ -156,6 +156,7 @@
 .gatsby_btn-site_article_sidebar {
   .full();
   .link-none();
+  .btn-border();
   box-shadow: none !important;
   margin-bottom: 1px;
   padding: .3em .5em;
