--- a/src/xtend-reset.css
+++ b/src/xtend-reset.css
@@ -27,32 +27,40 @@ $media-sm: 700px;
   }
 }
 
+$padding-small: 0px;
+
+@define-mixin btn-small {
+  padding: $padding-small;
+}
+
+@define-mixin btn-small {
+  $padding-small: 40px;
+  padding: $padding-small;
+}
+
+.btn-setup {
+  @mixin btn-small;
+}
+
 .btn {
   @extend .btn-setup;
-}
-
-$padding: 40px;
-
-.btn-setup {
-  padding: $padding;
+  /*@extend .btn-setup.nested; // PROBLEMA NON FUNZIONA*/
 }
 
 .btn-setup {
-  color: var(--primary);
+  background: var(--primary);
+  .nested {
+    color: var(--primary);
+  }
   @mixin active {
-    color: white;
-    @media (--sm) {
+    color: black;
+    @media (--min-sm) {
       transform: scale(2);
     }
   }
-  @media (--sm) {
-    background: var(--primary);
+  @media (--min-sm) {
     background: color-mod(var(--primary) alpha(50%));
   }
-}
-
-.btn-setup {
-  text-decoration: underline;
 }
 
 /**
@@ -61,12 +69,12 @@ $padding: 40px;
 
 html, body {
   height: 100%;
-  touch-action: manipulation; /* disable double-tap */
+  touch-action: manipulation; // disable double-tap
 }
 
 html {
   box-sizing: border-box;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* disable tap highlight */
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); // disable tap highlight
 }
 
 body {
@@ -79,7 +87,7 @@ body {
 }
 
 a img {
-  /* ie10 remove border */
+  // ie10 remove border
   border: 0;
   outline: 0;
 }
@@ -87,12 +95,12 @@ a img {
 a, button {
   cursor: pointer;
   text-decoration: none;
-  /* enables pointer events */
+  // enables pointer events
   display: inline-block;
 }
 
 button {
-  /* .reset-text(); */
+  // .reset-text();
   border: 0;
   padding: 0;
   background: transparent;
@@ -101,7 +109,7 @@ button {
 
 img {
   display: inline-block;
-  vertical-align: top; /* fix inline-block spacing */
+  vertical-align: top; // fix inline-block spacing
 }
 
 svg {
@@ -139,7 +147,7 @@ label[for] {
 }
 
 input:not([type="checkbox"]):not([type="radio"]), textarea {
-  /* remove shadow */
+  // remove shadow
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -147,7 +155,7 @@ input:not([type="checkbox"]):not([type="radio"]), textarea {
 
 select {
   cursor: pointer;
-  /* remove arrow */
+  // remove arrow
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -157,12 +165,12 @@ select {
 }
 
 button, input, select, textarea {
-  /* safari margin */
+  // safari margin
   margin: 0;
 }
 
 input, select, textarea {
-  /* autofill */
+  // autofill
   &:-webkit-autofill, &:-webkit-autofill:hover, &:-webkit-autofill:focus {
     transition-property: background-color, color;
     transition-delay: 10000000s;
