gatbsy plugin less v3

--- a/src/gatsby/assets/styles/theme.less
+++ b/src/gatsby/assets/styles/theme.less
@@ -21,3 +21,9 @@
 @import '_footer.less';
 @import '_main.less';
 @import '_demo.less';
+
+body {
+  &:before {
+    content: "@{env}" !important;
+  }
+}
