--- a/src/reset.scss
+++ b/src/reset.scss
@@ -35,7 +35,7 @@ a, button {
 }
 
 button {
-  .reset-text();
+  @include text-reset;
   border: 0;
   padding: 0;
   background: transparent;
@@ -62,7 +62,7 @@ address {
 }
 
 hr {
-  .full();
+  @include full;
 }
 
 dl, dd {
