--- a/src/utils.scss
+++ b/src/utils.scss
@@ -14,3 +14,20 @@
   width: 100%;
   height: auto;
 }
+
+@mixin test() {
+  &:before {
+    content: 'mixin utils'
+  }
+}
+
+%test {
+  &:before {
+    content: 'extend utils'
+  }
+}
+
+body {
+  @include test;
+  @extend %test;
+}
